--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - conda config --add channels defaults
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
-  - conda update -q conda
+  - conda update -q --only-deps conda
 
   # Useful for debugging any issues with conda
   - conda info -a
