--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ install:
   - conda config --add channels defaults
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
+
+  - conda uninstall setuptools
+  # This is a must to make it works
+  - conda install setuptools
   - conda update -q --force conda
 
   # Useful for debugging any issues with conda
