--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
 
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda activate test-environment
-  - conda install -n test-environment -r requirements.txt
+  - conda install -n test-environment --file requirements.txt
 
 script:
   - pytest
