--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda activate test-environment
   - conda install -n test-environment --file requirements.txt
+  - which pytest
+  - which pytest-3
 
 script:
-  - pytest
+  - pytest-3
